--- a/geotiffs-to-netcdf.ipynb
+++ b/geotiffs-to-netcdf.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,11 +54,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "directory = r'C:\\Users\\steve\\Desktop\\snowmap_test3-20200422T165952Z-001\\snowmap_test3'"
+    "directory = r'C:\\Users\\steve\\Desktop\\snowmap_test8-20200423T000031Z-001\\snowmap_test8'"
    ]
   },
   {
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,11 +86,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "out_filename = 'Example_PM_SSUM_25km_month02.nc'"
+    "out_filename = 'Example_PM_SSUM_25km_month02_.nc'"
    ]
   },
   {
@@ -104,14 +104,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Opening C:\\Users\\steve\\Desktop\\snowmap_test3-20200422T165952Z-001\\snowmap_test3\\snowmap_99.tiff"
+      "Opening C:\\Users\\steve\\Desktop\\snowmap_test8-20200423T000031Z-001\\snowmap_test8\\snowmap_90_90.tifff"
      ]
     }
    ],
